syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "NoteOpsProto";

package facade;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "routines.proto";
import "facade_common.proto";


import "extra/common_note.proto";

service NoteOperations {
  rpc CreateNote(CreateNoteParams) returns (domain.NoteDataData) {}
  rpc UpdateNote(UpdateNoteParams) returns (domain.NoteDataData) {}
  rpc GetNote(BundleGetRequest) returns (domain.NoteDataData) {}

  

  // -- relations: one --

  // -- extensions --
  

    // -- query --
  rpc QueryAll(BundleHandle) returns (domain.NoteDataList) {}
  rpc QueryIds(BundleHandle) returns (routines.Strings) {}
  rpc QueryList(BundleQueryMap) returns (domain.NoteDataList) {}
  rpc QueryOne(BundleQueryMap) returns (domain.NoteDataData) {}
  rpc Select(BundleHandle) returns (domain.NoteDataList) {}

  rpc ListNoteData(BundleListRequest) returns (domain.NoteDataList) {}
  rpc LoadNoteData(BundleIdsRequest) returns (domain.NoteDataList) {}
  rpc StreamNoteData(BundleListRequest) returns (stream domain.NoteDataList) {}
  rpc RemoveNoteData(BundleDeleteRequest) returns (routines.Response) {}
}


// Mutations for main entity

message CreateNoteParams{
  BundleHandle handle = 1;
  domain.NoteDataData noteData = 2;
  string comment = 3;
}

message UpdateNoteParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.NoteDataData noteData = 3;
  string comment = 4;
}


